--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "flowbite": "^1.8.1",
     "nuxt-microcms-module": "^3.0.2"
   }
